created react app, fetched all owners, added read pets & appointments of a specific owner
